--- a/GostuffsAutoSync/GostuffsAutoSync.csproj
+++ b/GostuffsAutoSync/GostuffsAutoSync.csproj
@@ -143,6 +143,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
     </None>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
